@@ -44,7 +44,7 @@ public class MemberController {
         String username = authentication.getName();
         List<String> roles = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         ExtractMember extractMember = new ExtractMember(memberId, username, roles);
 
@@ -80,7 +80,10 @@ public class MemberController {
     @GetMapping("/get")
     public ResponseEntity<MemberResponseDto> getMember(Authentication authentication){
         Long memberId = (Long) authentication.getCredentials();
-
+        List<String> roles = authentication.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .toList();
+        log.info("조회 전 roles: { }", roles.toArray());
         return new ResponseEntity<>(memberService.findMyInfo(memberId), HttpStatus.OK);
     }
 
